--- a/src/messages/label_en.properties
+++ b/src/messages/label_en.properties
@@ -1,7 +1,7 @@
 label.currentTime=current Time
 title.currentTime=Time
 
-login.form.tilte=Login Form
+login.form.title=Login Form
 login.form.type=Login Type
 login.form.id=Id
 login.form.password=Password
