--- a/src/messages/validation_en.properties
+++ b/src/messages/validation_en.properties
@@ -2,7 +2,7 @@ required=required
 required.login.id=login id is required
 required.login.password=login password id required
 required.login.loginType=You have to select login type
-invalidIdPassword.login=Login Id and Password do not match.(you provied {0})
+invalidIdOrPassword.login=Login Id and Password do not match.(you provided {0})
 duplicate.homepageUrl=Already registered URL.
 invalidValue=invalid value.
 not_supported=not supported type.
